<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.device.fot</groupId>
    <artifactId>virtual-fot-device</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <graalvm.plugin.version>0.10.1</graalvm.plugin.version>
    </properties>
    <name>Virtual-FoT-Device</name>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>virtual-fot-device</name>
            <url>https://maven.pkg.github.com/UellingtonDamasceno/virtual-fot-device</url>
        </repository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.2.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.UellingtonDamasceno</groupId>
            <artifactId>extended-tatu-wrapper</artifactId>
            <version>latest</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version> 
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.device.fot.virtual.app.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <!-- 1. Versão do plugin atualizada -->
                        <version>${graalvm.plugin.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <mainClass>com.device.fot.virtual.app.Main</mainClass>
                            <imageName>virtual-fot-device</imageName>
                            <buildArgs>
                                <buildArg>--initialize-at-build-time=org.eclipse.paho.client.mqttv3.MqttAsyncClient</buildArg>
                                <buildArg>--initialize-at-build-time=org.eclipse.paho.client.mqttv3.MqttClient</buildArg>
                                <buildArg>--initialize-at-build-time=org.eclipse.paho.client.mqttv3.internal.CommsReceiver</buildArg>
                                <buildArg>--initialize-at-build-time=org.eclipse.paho.client.mqttv3.internal.CommsSender</buildArg>
                                
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>--enable-url-protocols=http,https</buildArg>
                                <buildArg>-H:ReflectionConfigurationFiles=src/main/resources/META-INF/native-image/reflect-config.json</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
